UC#1 Order actions

--- a/src/force-app/main/default/classes/OrderSelector.cls
+++ b/src/force-app/main/default/classes/OrderSelector.cls
@@ -1,13 +1,31 @@
 public with sharing class OrderSelector {
 
     public Order[] getOrdersByAccountId(Id accountId) {
-        if (null == accountId){
+        if (null == accountId) {
             return new Order[]{};
         }
         return [
-                SELECT OrderNumber, EffectiveDate, Status, TotalAmount
+                SELECT OrderNumber, EffectiveDate, Status, TotalAmount, (
+                        SELECT Id, ContentDocument.Title, ContentDocumentId
+                        FROM ContentDocumentLinks
+                        WHERE ContentDocument.Title LIKE 'invoice%'
+                        ORDER BY SystemModstamp DESC
+                        LIMIT 1
+                )
                 FROM Order
                 WHERE AccountId = :accountId
+        ];
+    }
+
+    public Order[] getOrdersByIds(Set<Id> orderIdsSet) {
+        if (null == orderIdsSet || orderIdsSet.isEmpty()) {
+            return new Order[]{};
+        }
+        return [
+                SELECT Status, OrderNumber
+                FROM Order
+                WHERE Id IN :orderIdsSet
+                FOR UPDATE
         ];
     }
 
