UC#1 - Resolve Sonar errors.

--- a/src/force-app/main/default/classes/ContentDocumentLinkService.cls
+++ b/src/force-app/main/default/classes/ContentDocumentLinkService.cls
@@ -1,9 +1,8 @@
 /**
  * @description ContentDocumentLinkService: ContentDocumentLink Service to capture Business logic.
- * @note: Uses inherited sharing to enforce the sharing rules of the class that calls it.
  * //TODO: Cover with Apex Tests.
  */
-public inherited sharing class ContentDocumentLinkService {
+public with sharing class ContentDocumentLinkService {
     @TestVisible
     private static ContentDocumentLinkService instance;
 
