UC#1 Order status

--- a/src/force-app/main/default/classes/OrderTriggerHandler.cls
+++ b/src/force-app/main/default/classes/OrderTriggerHandler.cls
@@ -1,21 +1,13 @@
-public with sharing class OrderTriggerHandler extends TriggerHandler {
+public with sharing class OrderTriggerHandler {
 
-    protected override void beforeInsert() {
-        setOrderTimestamps(Trigger.new);
-    }
-
-    protected override void beforeUpdate() {
-        updateOrderTimestamps((Map<Id, Order>) Trigger.oldMap, (Map<Id, Order>) Trigger.newMap);
-    }
-
-    private static void setOrderTimestamps(Order[] orders) {
+    public static void setOrderTimestamps(Order[] orders) {
         for (Order order : orders) {
             order.LastStatusChanged__c = Datetime.now();
         }
     }
 
-    private static void updateOrderTimestamps(Map<Id, Order> oldMap, Map<Id, Order> newMap) {
-        for (Order order : newMap.values()) {
+    public static void updateOrderTimestamps(Order[] orders, Map<Id, Order> oldMap) {
+        for (Order order : orders) {
             if (oldMap.get(order.Id).Status != order.Status) {
                 order.LastStatusChanged__c = Datetime.now();
             }
